Remodificacion de las clases Curso y plan suscripcion ademas de la implementacion de DTOs para ambas clases